re PR middle-end/44706 (Failed to build 483.xalancbmk in SPEC CPU 2006)

PR middle-end/44706
	* predict.c (predict_paths_for_bb): Handle case when control dependence
	BB has only abnormal edges.
	* g++.dg/tree-ssa/pr44706.C: New testcase.

From-SVN: r161691